# ChiMPSS

./: .gitignore  .pre-commit-config.yaml  612_gpcrs.txt  ADJUST_SYSTEM.py  Adjust_System.ipynb  Analyze_MPI_3.5.ipynb  Build(BP).ipynb  Build(BP)KOR.ipynb  CHANGELOG.md  ChiMPSS-Showcase.ipynb  Fieg2005.ipynb  GetContactsHelper.py  HMR_MPI.ipynb  MPI_compare.ipynb  MotorRow.py  MotorRow_utils.py  NewDistanceMatrix.ipynb  PCA_of_GPCRs.ipynb  README.md  REORGANIZATION_PLAN.txt  RUN_FULTONMARKET.py  RUN_FULTONMARKET_MPI.py  RUN_MOTORROW.py  RUN_RETRO_ANALYSIS.py  Retro_Analysis.ipynb  Run_MR_FM.ipynb  Static_Env.ipynb  Suite.py  Test_Things_Work.py  Untitled.ipynb  calc_distance_matrix.py  conda-env.yml  fetch_pdb_list.py  generate_pca_gpcrs.py  gpcr_pca_utils.py  grid_potentials.py  project_pca_gpcrs.py  pyproject.toml  recovery.job  recovery.py  (+4 more)
.claude/: settings.local.json
.github/workflows/: ci.yml
Bridgeport/: Bridgeport.py  RUN_BRIDGEPORT.job  RUN_BRIDGEPORT.py  RUN_BRIDGEPORT_GPU.job  __init__.py
DistanceMatrix/: DistanceMatrix.py  DistanceMatrixUtils.py  __init__.py  distance_matrix.py
DistanceMatrix/.ipynb_checkpoints/: DistanceMatrixUtils-checkpoint.py
Docking/: Docking.py  Prepare_Docking.py  RUN_DOCKING.py  __init__.py  mgltools.yml  mgltools_config.sh
Docking/.ipynb_checkpoints/: BOX_VISUALISATION-checkpoint.ipynb  README-checkpoint.md
ForceFields/: ForceFieldHandler.py  README.md  __init__.py  force_fields.py  joiner.py  write_xml_pretty_input.json
ForceFields/.ipynb_checkpoints/: write_xml_pretty-checkpoint.py
FultonMarket/: FultonMarketAnalysis.py  FultonMarketUtils.py  FultonMarketwithAnalyzer.py  Randolph.py  RandolphwithAnalyzer.py  __init__.py  analysis.py  contact_network.py  convergence.py  fulton_market.py  randolph.py  retro_convergence_utils.py  zD_RESAMPLE.py  zD_Randolph.py  z_DFultonMarket.py
FultonMarket/analysis/: FultonMarketAnalysis.py  FultonMarketAnalysisUtils.py  MultiAnalysis.py  TRUNCATE.py
Ligand/: Analogue.py  Ligand.py  MutatedPeptide.py  __init__.py  mutated_peptide.py
Minimizer/: Minimizer.py  Minimizer_utils.py  __init__.py
RepairProtein/: README.md  RUN_RepairProtein.py  RepairProtein.py  __init__.py
chimpss/: __init__.py
chimpss/common/: __init__.py  filesystem.py  geometry.py  io.py  logging.py  openmm_utils.py
chimpss/motor_row/: __init__.py  motor_row.py
interactive/: ANALOGUE_EXAMPLE.ipynb  MUTATED_PEPTIDE_EXAMPLE.ipynb  __init__.py  interactive.ipynb  interactive_utils.py
notebooks/: 00_showcase.ipynb  01-Jupyter_Notebooks.ipynb  02-Structural_Visualization.ipynb  02_minimize.ipynb  03-ColabFold.ipynb  06-Virtual_Screening.ipynb  07-System_Preparation.ipynb  08-Molecular_Dynamics.ipynb  10-Parallel_Tempering.ipynb  11-MD_Analysis.ipynb  13-QSPR_Solubility.ipynb  NewDistanceMatrix.ipynb  PCA_of_GPCRs.ipynb
notebooks/analysis/: Analyze_MPI_3.5.ipynb  MPI_compare.ipynb  NewDistanceMatrix.ipynb  PCA_of_GPCRs.ipynb  Run_MR_FM.ipynb
notebooks/archive/: Adjust_System.ipynb  Interaction_Energy.ipynb  Water_Hole.ipynb  implicit_membrane.ipynb  test.ipynb
notebooks/examples/: ANALOGUE_EXAMPLE.ipynb  Build(BP).ipynb  Build(BP)KOR.ipynb  ChiMPSS-Showcase.ipynb  MUTATED_PEPTIDE_EXAMPLE.ipynb  PEPTIDE_EXAMPLE.ipynb  SMALL_MOLECULE_EXAMPLE.ipynb  interactive.ipynb
notebooks/exploratory/: BOX_VISUALISATION.ipynb  Docking_Test.ipynb  Fieg2005.ipynb  Minimize.ipynb  Static_Env.ipynb  Talha_Contacts.ipynb  Water_Hole.ipynb  implicit_membrane.ipynb
notebooks/tutorials/: 04-Electrostatics.ipynb  05-Molecular_Docking.ipynb  07-System_Preparation.ipynb  08-Molecular_Dynamics.ipynb  09-Umbrella.ipynb  10-Parallel_Tempering.ipynb  12-End-Point_BFE.ipynb  12-End-Point_BFE_obc2.ipynb
scripts/: __init__.py  adjust_system.py  recovery.py  run_bridgeport.py  run_docking.py  run_fulton_market.py  run_fulton_market_mpi.py  run_motor_row.py  run_repair_protein.py
scripts/slurm/: recovery.job  run_mpi.job  run_one.job
src/chimpss/: __init__.py
src/chimpss.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/chimpss/analysis/: contacts.py  distance_matrix.py  gpcr_pca.py  grid_potentials.py  pdb_fetch.py
src/chimpss/bridgeport/: __init__.py  _utils.py  analogue.py  bridgeport.py  forcefield.py  ligand.py  ligand_utils.py  minimizer.py  minimizer_utils.py  mutated_peptide.py  openmm_joiner.py  protein_preparer.py  repair_protein.py
src/chimpss/cli/: fetch_pdbs.py  fultonmarket.py  fultonmarket_mpi.py  generate_pca.py  motorrow.py  project_pca.py  recovery.py  retro_analysis.py
src/chimpss/fultonmarket/: __init__.py  analysis.py  contact_network.py  fulton_market.py  randolph.py  retro_convergence.py  utils.py
src/chimpss/motorrow/: __init__.py  motorrow.py  utils.py
src/chimpss/shared/: io.py  logging.py
test_data/alphafold3/: fold_htr2b_full_data_0.json  fold_htr2b_full_data_1.json  fold_htr2b_full_data_2.json  fold_htr2b_full_data_3.json  fold_htr2b_full_data_4.json  fold_htr2b_job_request.json  fold_htr2b_model_0.cif  fold_htr2b_model_1.cif  fold_htr2b_model_2.cif  fold_htr2b_model_3.cif  fold_htr2b_model_4.cif  fold_htr2b_summary_confidences_0.json  fold_htr2b_summary_confidences_1.json  fold_htr2b_summary_confidences_2.json  fold_htr2b_summary_confidences_3.json
test_data/fasta/: OPRM1.fasta
test_data/raw_RCSB/: 5TVN.cif  5XR8.cif  6DRX.cif  6DRY.cif  6DRZ.cif  6DS0.cif  6PT0.cif  7SRQ.cif  7SRR.cif  7SRS.cif  7ZBE.cif  8A6E.cif  8DZP.cif  8DZQ.cif  8GUS.cif  README.md
test_data/raw_RCSB/.ipynb_checkpoints/: 5HT2B.fasta-checkpoint.txt  htr2b.uniprot_seq-checkpoint.txt
tests/: VERIFY.sh  conftest.py
tests/regression/: test_fultonmarket_e2e.py  test_retro_conv.py
tests/unit/test_analysis/: test_gpcr_pca.py  test_pdb_fetch.py
tests/unit/test_bridgeport/: test_imports.py
tests/unit/test_fultonmarket/: test_imports.py  test_math.py  test_retro_logic.py  (+1 more)
utility/: FileManipulations.py  General.py  Reporting.py  __init__.py
utility/.ipynb_checkpoints/: Reporting-checkpoint.py
utils/: ProteinPreparer.py  README.md  __init__.py  protein_preparer.py  utils.py
(+3 files in other folders)
