[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "chimpss"
version = "0.1.0"
description = "Chicago Membrane Protein Simulation Suite — 3-stage MD pipeline (Bridgeport → MotorRow → FultonMarket)"
requires-python = ">=3.8"
dependencies = [
    # Simulation
    "openmm",
    "openmmtools",
    # Structure / trajectory
    "mdtraj",
    "MDAnalysis",
    "pdbfixer",
    "parmed",
    "pdb2pqr",
    # Thermodynamics
    "pymbar",
    "mpiplus",
    # Cheminformatics
    "rdkit",
    "openff-toolkit",
    # Numerics / ML
    "numpy",
    "scipy",
    "scikit-learn",
    "jax",
    # Visualization / IO
    "seaborn",
    "netCDF4",
    "py3dmol",
    # Note — NOT listed here (not pip-installable):
    #   modeller     → conda install -c salilab modeller
    #   openbabel    → conda install -c conda-forge openbabel
    #   vina         → separate AutoDock Vina install
    #   openmmgridforce → pip install git+https://github.com/jimtufts/openmmgridforce
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "black",
    "pre-commit",
]
mpi = [
    "mpi4py",
]
docs = [
    "sphinx",
    "myst-parser",
    "sphinx-autodoc-typehints",
]

[project.scripts]
# CLI entry points — wired up in Phase 6
# chimpss-bridgeport      = "chimpss.cli.bridgeport:main"
# chimpss-motorrow        = "chimpss.cli.motorrow:main"
# chimpss-fultonmarket    = "chimpss.cli.fultonmarket:main"
# chimpss-fultonmarket-mpi = "chimpss.cli.fultonmarket_mpi:main"
# chimpss-retro-analysis  = "chimpss.cli.retro_analysis:main"
# chimpss-fetch-pdbs      = "chimpss.cli.fetch_pdbs:main"
# chimpss-generate-pca    = "chimpss.cli.generate_pca:main"
# chimpss-project-pca     = "chimpss.cli.project_pca:main"
# chimpss-recovery        = "chimpss.cli.recovery:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"chimpss.bridgeport" = ["*.xml"]

[tool.ruff]
target-version = "py38"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.black]
target-version = ["py38"]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests requiring long runtimes or HPC (deselect with '-m not slow')",
    "gpu: marks tests requiring a GPU (deselect with '-m not gpu')",
]
